--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ branches:
     - master
 
 before_install:
-  - nvm install
+  - nvm install --latest-npm
 
 env: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 
